# funclog

./: .gitignore  CMakeLists.txt  Containerfile  README.md  build.sh
include/: FuncLog.h  VarAssign.h  ir_logger.h  ir_stdio.h  ir_stdlib.h
lib/: CMakeLists.txt  FuncLog.cpp  VarAssign.cpp  ir_logger.cpp  ir_stdio.cpp  ir_stdlib.cpp
test/: CMakeLists.txt  examine-func-pointers.c  hello.c  test-logger.c  test-logger.sh  test-pass.sh  test-varassign.sh
